@@ -1,3 +1,7 @@
+2017-08-20  Carl Hetherington  <cth@carlh.net>
+
+	* Add VF/OV and KDM support to player.
+
 2017-08-19  Carl Hetherington  <cth@carlh.net>
 
 	* Deal with newly-invalid configured default container ratios
